# isync

./: .gitignore  Makefile  main.py  pyproject.toml
scripts/: checks.sh  format.sh
