[tool.poetry]
name = "isync"
version = "0.1.0"
description = ""
authors = ["kndrad <kon.now@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
